source/sass/blocks/country-filter.scss
.country-filter {
  padding-top: 68px;
  padding-bottom: 26px;
  background-color: $main-background-color-light4;
  border-radius: 0 0 26px 26px;
  margin-top: -50px;

  @media (min-width: $tablet-width) {
    margin-top: -60px;
    padding-top: 120px;
    border-radius: 0 0 60px 60px;
    padding-bottom: 74px;
  }

  @media (min-width: $desktop-width) {
    background-color: $main-background-color-light;
    border-radius: 0 0 50px 50px;
  }
}

.country-filter__content-wrapper {
  @media (min-width: $tablet-width) {
    padding: 0 32px;
  }

@media (min-width: $desktop-width) {
    padding: 0 20px;
  }
}

.country-filter--collapsed {
  background-color: $main-background-color-light4;
}

.country-filter__collapsed-wrapper {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  margin-bottom: 10px;

  @media (min-width: $tablet-width) {
    flex-wrap: nowrap;
    align-items: center;
  }
}

.country-filter__heading {
  @include typography(16px, 700, 1.12);
  text-transform: uppercase;
  color: $main-background-color-dark;
  padding-left: 25px;
  margin: 0;
  display: inline-block;
  position: relative;

  @media (max-width: $mobile-width-only) {
    width: 83%;
    margin-bottom: 36px;
  }

  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
    display: none;
  }

  @media (min-width: $desktop-width) {
    font-size: 20px;
    line-height: 1;
    padding-left: 45px;
    margin-right: 30px;
    max-width: 30%;
  }

  &::after {
    content: ":";
    color: $main-background-color-dark;
    height: 16px;
    width: 4px;
    display: inline-block;
  }

  &::before {
    content: " ";
    position: absolute;
    left: 0;
    top: 50%;
    height: 10px;
    width: 15px;
    transform: translate(0, -50%);
    display: inline-block;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 10'%3E%3Cpath fill='%23192144' d='M4 0h2v2H4zM0 0h3v2H0zM7 0h8v2H7zM4 8h2v2H4zM0 8h3v2H0zM7 8h8v2H7zM9 4h2v2H9zM12 4h3v2h-3zM0 4h8v2H0z'/%3E%3C/svg%3E");
    background-repeat: no-repeat;

    @media (min-width: $desktop-width) {
      width: 23px;
      height: 15px;
    }
  }
}

.country-filter__continent-list {
  padding: 0;
  margin: 0;
  list-style: none;
  display: flex;
  flex-wrap: wrap;

  @media (max-width: $mobile-width-only) {
    // margin-bottom: 20px;
    flex-direction: column;
    padding: 0 25px;
    order: 1;
    width: 100%;
  }

  @media (min-width: $tablet-width) {
    max-width: 70%;
  }

  @media (min-width: $desktop-width) {
    max-width: 50%;
  }
}

.country-filter__continent-item {
  @include typography(16px, 700, 1.12);
  margin-right: 28px;

  @media (max-width: $mobile-width-only) {
    margin-bottom: 10px;
  }

  @media (min-width: $tablet-width) {
    font-size: 20px;
    line-height: 1;
  }
}

.country-filter__continent-link {
  @include typography(16px, 700, 1.12);
  text-decoration: none;
  text-transform: uppercase;
  color: rgba($main-background-color-dark, 0.3);

  @media (min-width: $tablet-width) {
    font-size: 20px;
    line-height: 1;
  }
}

.country-filter__continent-link--active {
  color: $main-background-color-dark;
}

.country-filter__button {
  border: none;
  padding: 0;
  background-color: transparent;
  position: relative;
  cursor: pointer;
  font-family: inherit;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  min-height: 16px;

  @media (max-width: $mobile-width-only) {
    width: 15%;
  }

  @media (min-width: $tablet-width) {
    max-width: 30%;
    margin-left: auto;
  }

  @media (min-width: $desktop-width) {
    max-width: 20%;
    margin-right: 68px;
  }
}

.country-filter__lists-wrapper {
  margin-bottom: 28px;

  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
    display: flex;
    justify-content: space-between;
    margin-bottom: 42px;
  }

  @media (min-width: $desktop-width) {
    margin-bottom: 20px;
  }
}

.country-filter__button-text {
  @include typography(20px, 700, 1);
  color: $main-background-color-dark;
  text-transform: uppercase;
  display: inline-block;
}

.country-filter__button-text--close {
  display: inline-block;
  margin-right: 84px;
}

.country-filter__button-icon {
  position: absolute;
  right: 0;
  top: 50%;
  transform: translate(0, -50%);
}

.country-filter__button-icon--close {
  @media (min-width: $tablet-width) {
    width: 20px;
    height: 20px;
  }
}

.country-filter__button-icon--show {
  @media (min-width: $tablet-width) {
    width: 30px;
    height: 6px;
  }
}

.country-filter__button-text--show {
  display: none;
}

.country-filter__button-icon--show {
  display: none;
}

.country-filter--collapsed .country-filter__button-text--close {
  display: none;
}

.country-filter--collapsed .country-filter__button-icon--close {
  display: none;
}

.country-filter--collapsed .country-filter__button-text--show {
  display: inline-block;
  margin-right: 46px;
}

.country-filter--collapsed .country-filter__button-icon--show {
  display: inline-block;
}

@media (max-width: $mobile-width-only) {
  .country-filter__button-text {
    visibility: hidden;
    position: absolute;
  }
}

.country-filter__hide-list-button {
  display: block;
  border-radius: 20px;
  padding: 12px 30px 8px;
  background-color: #d6daed;
  color: $button-text-color-darker;

  @include typography(16px, 700, 1.25);
  text-transform: uppercase;
  border: none;
  width: 100%;
  font-family: inherit;

  @media (min-width: $tablet-width) {
    font-size: 20px;
    line-height: 1;
    padding: 36px 56px 38px;
    margin: 0 auto;
    width: 99%;
  }

  @media (min-width: $desktop-width) {
    width: 103%;
    margin-left: -22px;
  }
}

.country-filter__hide-list-button-svg {
  margin-right: 6px;

  @media (min-width: $tablet-width) {
    width: 22px;
    height: 20px;
    margin-right: 14px;
    transform: translate(0, 4px);
  }
}

